Spotting activity1 complete! Drag and Drop fixed. Error message depending the selected answer. If right answer is selected the user can continue to the next activity. Success message randomly selected.

--- a/src/main/webapp/sequence/activity/spottingActivity.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity.xhtml
@@ -42,127 +42,94 @@
                 <p:outputLabel for="level" value="Niveau: " styleClass="control-label"/>
                 <p:outputLabel id="level" value="#{spottingActivityBean.text.entete.niveau}"/>
             </h:panelGrid>
-            <p:panel id="spottingActivityTextPanel">
+            <p:panel id="spottingActivityTextPanel" styleClass="text text-justify">
                 <div class="title">
                     <ui:repeat value="#{spottingActivityBean.titleElems}" var="elem">
                         <ui:fragment rendered="#{elem.elem}">
                             <h:outputText value=" #{elem.value} "/>
                         </ui:fragment>
-                        <ui:fragment rendered="#{elem.referent}">    
-                            <h:outputText id="titleRef" styleClass="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}"
-                                          value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                
-                            <ui:fragment rendered="#{elem.idn != spottingActivityBean.MAIN_REF}">
-                                <p:draggable for="titleRef" revert="true" helper="clone"/>
-                            </ui:fragment>
+                        <ui:fragment rendered="#{elem.referent}">
+                            <div class="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}" 
+                                 idn="#{elem.idn}" right="false" type="#{elem.type}" subtype="#{elem.sousType}"
+                                 draggable="#{elem.idn != spottingActivityBean.MAIN_REF}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                         </ui:fragment>
                         <ui:fragment rendered="#{elem.coreferent}">
-                            <h:outputText id="titleCoref" styleClass="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}"
-                                          value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                                                     
-                            <ui:fragment rendered="#{elem.idn == spottingActivityBean.elemToFind}">
-                                <p:draggable for="titleCoref" revert="true" helper="clone"/>
-                            </ui:fragment>
-                            <ui:fragment rendered="#{elem.chaine != spottingActivityBean.MAIN_REF}">
-                                <p:draggable for="titleCoref" revert="true" helper="clone"/>
-                            </ui:fragment>
+                            <div class="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}" 
+                                 idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
+                                 draggable="#{elem.idn == spottingActivityBean.elemToFind || elem.chaine != spottingActivityBean.MAIN_REF}"
+                                 right="#{elem.idn == spottingActivityBean.elemToFind}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                         </ui:fragment>
                     </ui:repeat>
-
                 </div>
-                <ui:repeat value="#{spottingActivityBean.text.contenu.sousTitreOrParagraphe}" var="element">
-                    <ui:fragment rendered="#{element.sousTitre}">
-                        <div class="subtitle">
-                            <ui:repeat value="#{spottingActivityBean.getSubtitleElems(element)}" var="elem">
-                                <ui:fragment rendered="#{elem.elem}">
-                                    <h:outputText value=" #{elem.value} "/>
-                                </ui:fragment>
-                                <ui:fragment rendered="#{elem.referent}">
-                                    <h:outputText id="subtitleRef" styleClass="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}"
-                                                  value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                
-                                    <ui:fragment rendered="#{elem.idn != spottingActivityBean.MAIN_REF}">
-                                        <p:draggable for="subtitleRef" revert="true" helper="clone"/>
+                <div class="text-justify">
+                    <ui:repeat value="#{spottingActivityBean.text.contenu.sousTitreOrParagraphe}" var="element">
+                        <ui:fragment rendered="#{element.sousTitre}">
+                            <div class="subtitle">
+                                <ui:repeat value="#{spottingActivityBean.getSubtitleElems(element)}" var="elem">
+                                    <ui:fragment rendered="#{elem.elem}">
+                                        <h:outputText value=" #{elem.value} "/>
                                     </ui:fragment>
-                                </ui:fragment>
-                                <ui:fragment rendered="#{elem.coreferent}">
-                                    <h:outputText id="subtitleCoref" styleClass="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}"
-                                                  value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                                   
-                                    <ui:fragment rendered="#{elem.idn == spottingActivityBean.elemToFind}">
-                                        <p:draggable for="subtitleCoref" revert="true" helper="clone"/>
+                                    <ui:fragment rendered="#{elem.referent}">
+                                        <div class="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}" 
+                                             idn="#{elem.idn}" right="false" type="#{elem.type}" subtype="#{elem.sousType}"
+                                             draggable="#{elem.idn != spottingActivityBean.MAIN_REF}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                                     </ui:fragment>
-                                    <ui:fragment rendered="#{elem.chaine != spottingActivityBean.MAIN_REF}">
-                                        <p:draggable for="subtitleCoref" revert="true" helper="clone"/>
+                                    <ui:fragment rendered="#{elem.coreferent}">
+                                        <div class="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}" 
+                                             idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
+                                             draggable="#{elem.idn == spottingActivityBean.elemToFind || elem.chaine != spottingActivityBean.MAIN_REF}"
+                                             right="#{elem.idn == spottingActivityBean.elemToFind}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                                     </ui:fragment>
-                                </ui:fragment>
-                            </ui:repeat>
-                        </div>
-                    </ui:fragment>
-                    <ui:fragment rendered="#{element.paragraphe}">
-                        <div class="paragraph">
-                            <ui:repeat value="#{spottingActivityBean.getParagraphElems(element)}" var="elem">
-                                <ui:fragment rendered="#{elem.elem}">
-                                    <h:outputText value=" #{elem.value} "/>
-                                </ui:fragment>
-                                <ui:fragment rendered="#{elem.referent}">
-                                    <h:outputText id="paraRef" styleClass="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}"
-                                                  value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                
-                                    <ui:fragment rendered="#{elem.idn != spottingActivityBean.MAIN_REF}">
-                                        <p:draggable for="paraRef" revert="true" helper="clone"/>
+                                </ui:repeat>
+                            </div>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{element.paragraphe}">
+                            <div class="paragraph">
+                                <ui:repeat value="#{spottingActivityBean.getParagraphElems(element)}" var="elem">
+                                    <ui:fragment rendered="#{elem.elem}">
+                                        <h:outputText value=" #{elem.value} "/>
                                     </ui:fragment>
-                                </ui:fragment>
-                                <ui:fragment rendered="#{elem.coreferent}">
-                                    <h:outputText id="paraCoref" styleClass="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}"
-                                                  value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>                                                                     
-                                    <ui:fragment rendered="#{elem.idn == spottingActivityBean.elemToFind}">
-                                        <p:draggable for="paraCoref" revert="true" helper="clone"/>
+                                    <ui:fragment rendered="#{elem.referent}">
+                                        <div class="referent" style="color:#{spottingActivityBean.getRefColor(elem.idn)}" 
+                                             idn="#{elem.idn}" right="false" type="#{elem.type}" subtype="#{elem.sousType}"
+                                             draggable="#{elem.idn != spottingActivityBean.MAIN_REF}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                                     </ui:fragment>
-                                    <ui:fragment rendered="#{elem.chaine != spottingActivityBean.MAIN_REF}">
-                                        <p:draggable for="paraCoref" revert="true" helper="clone"/>
+                                    <ui:fragment rendered="#{elem.coreferent}">
+                                        <div class="coreferent" style="color:#{spottingActivityBean.getCoRefColor(elem.chaine, elem.idn)}" 
+                                             idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
+                                             draggable="#{elem.idn == spottingActivityBean.elemToFind || elem.chaine != spottingActivityBean.MAIN_REF}"
+                                             right="#{elem.idn == spottingActivityBean.elemToFind}">#{spottingActivityBean.getElementsFromReferent(elem)}</div>
                                     </ui:fragment>
-                                </ui:fragment>
-                            </ui:repeat>
-                        </div>                            
-                    </ui:fragment>
-                </ui:repeat>
+                                </ui:repeat>
+                            </div>                            
+                        </ui:fragment>
+                    </ui:repeat>
+                </div>
             </p:panel>
             <br/>
-
-            <p:fieldset id="availableElems" legend="Available Elements" rendered="false">
-                <p:dataTable id="elementsToDrag" var="elem" value="#{spottingActivityBean.elementsToDrag}"
-                             sortBy="#{elem.idn}" rowKey="#{elem.idn}">
-                    <p:column style="width:20px">
-                        <h:outputText id="dragIcon" styleClass="ui-icon ui-icon-arrow-4" />
-                        <p:draggable for="dragIcon" revert="true" helper="clone"/>
-                    </p:column>
-
-                    <p:column headerText="Id">
-                        <h:outputText value="#{elem.idn}" />
-                    </p:column>
-
-                    <p:column headerText="Text">
-                        <h:outputText value="#{spottingActivityBean.getElementsFromReferent(elem)}"/>
-                    </p:column>
-                </p:dataTable>
-            </p:fieldset>
-            <div class="span4">
-                <p:panel id="selectedElements">
-                    <p:outputPanel id="dropArea">
-                        <h:outputText value="!!!Drop here!!!" rendered="#{empty spottingActivityBean.selectedElements}" style="font-size:24px;" />
-                        <p:dataList id="selectedElementsList" var="elem" value="#{spottingActivityBean.selectedElements}" 
-                                    rendered="#{not empty spottingActivityBean.selectedElements}" type="none">
-                            <f:facet name="header">
-                                #{spottingActivityBean.mainReferent}
-                            </f:facet>
-                            <h:outputText value="#{spottingActivityBean.getElementsFromReferent(elem)}"/><br/>
-                        </p:dataList>
-                    </p:outputPanel>
-                </p:panel>
+            <div class="span3">
+                <table class="selection">
+                    <tr><th>#{spottingActivityBean.mainReferent}</th></tr>
+                    <ui:repeat value="#{spottingActivityBean.selectedElements}" var="elem">
+                        <tr><td>#{spottingActivityBean.getElementsFromReferent(elem)}</td></tr>
+                    </ui:repeat>
+                </table>
             </div>
-            <p:droppable for="selectedElements" tolerance="touch" activeStyleClass="ui-state-highlight" datasource="elementsToDrag">
-                <p:ajax listener="#{spottingActivityBean.onElemDrop}" update="dropArea elementsToDrag"/>
-            </p:droppable>
-
-
+            <div class="span3">
+                <div id="message" style="display: none;"></div>
+            </div>
+            <div class="span3">
+                <div id="next" style="display: none;">
+                    <p:link id="nextButton" outcome="spottingActivity2" value="Continuer" styleClass="btn btn-danger" />
+                </div>
+            </div>
         </h:form> 
 
+        <script>
+            var typeToFind = "#{spottingActivityBean.typeToFind}";
+            var subTypeToFind = "#{spottingActivityBean.subTypeToFind}";
+        </script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/activityJS.js"></script>
     </ui:define>
 
 </ui:composition>
